--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,19 @@
 Package: MatrixModels
-Version: 0.3-1.1
-Date: 2012-01-12
+Version: 0.4-0
+Date: 2015-01-13
 Title: Modelling with Sparse And Dense Matrices
-Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
-        <maechler@stat.math.ethz.ch>
-Maintainer: Doug and Martin <Matrix-authors@R-project.org>
+Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
+Maintainer: Martin Maechler <mmaechler+Matrix@gmail.com>
+Contact: Doug and Martin <Matrix-authors@R-project.org>
 Description: Modelling with sparse and dense 'Matrix' matrices, using
-        modular prediction and response module classes.
-Depends: R (>= 2.14.0), stats, utils, methods, Matrix (>= 1.0-1)
-notyetImports: stats4
+  modular prediction and response module classes.
+Depends: R (>= 2.14.0), utils
+Imports: stats, methods, Matrix (>= 1.0-1)
 Encoding: UTF-8
 LazyLoad: yes
 License: GPL (>= 2)
 URL: http://Matrix.R-forge.R-project.org/
-Packaged: 2014-02-12 08:15:16 UTC; ripley
-Repository: CRAN
-Date/Publication: 2014-02-12 09:24:36
+Packaged: 2015-01-13 11:52:51 UTC; maechler
 NeedsCompilation: no
+Repository: CRAN
+Date/Publication: 2015-01-14 06:22:36
